--- a/client/src/components/Hero/Hero.css
+++ b/client/src/components/Hero/Hero.css
@@ -1,36 +1,80 @@
-.hero{
+.hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #F2EBDD;
+    padding: 10px 100px 0 100px;
+}
+
+.hero-top {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #F2EBDD;
-    padding: 10px 100px 50px 100px;
+    width: 100%;
 }
-.hero-left{
+
+.hero-left {
     max-width: 50%;
     background: #F2EBDD;
 }
-.hero-left p{
-        font-size: 1.5rem;
-        color: #555;
-        margin: 0;
-        padding: 1rem 4rem 0 0;
+
+.hero-left p {
+    font-size: 1.5rem;
+    color: #555;
+    margin: 0;
+    padding: 1rem 4rem 0 0;
 }
+
 .hero-heading {
     font-size: 4.9rem;
     font-weight: 700;
     margin: 0;
 }
+
 .hero-heading-orange {
     color: #DF8532;
 }
-.hero-right{
-    background: #F2EBDD;
+
+.hero-right {
     max-width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .hero-right img {
     width: 100%;
     max-width: 700px;
+}
+
+.hero-bottom {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    background-color: #5B2555; /* Purple background */
+    padding: 2rem;
+    border-radius: 16px;
+    margin-top: 2rem;
+}
+
+.hero-box {
+    background-color: white;
+    color: #333;
+    padding: 1.5rem;
+    text-align: center;
+    flex: 1;
+    margin: 0 1rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.hero-box h3 {
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    color: #4A4A4A;
+}
+
+.hero-box p {
+    font-size: 1.1rem;
+    color: #555;
 }
