--- a/client/src/components/Categories/Categories.css
+++ b/client/src/components/Categories/Categories.css
@@ -70,12 +70,24 @@
     width: 100%;
     margin: 0;  
     transition: 0.3s;
+    overflow: hidden;
 }
-
+.category-box:nth-child(1) {
+    border-radius: 80px 10px 0 80px;
+}
+.category-box:nth-child(2){
+    border-radius: 10px 80px 80px 0;
+}
+.category-box:nth-child(4){
+    border-radius: 80px 0 10px 80px;
+}
+.category-box:nth-child(5){
+    border-radius: 0 80px 80px 10px;
+}
 .category-box img {
     width: 100%;
     height: 80%;
-    object-fit: cover;
+    object-fit: fill;
 }
 
 .category-box p {
