--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -35,14 +35,20 @@
     justify-content: center;
     gap: 0.4rem;
     cursor: pointer;
+    position: relative;  /* This is important for positioning the hr element */
 }
-.nav-menu hr{
-    border: none;
-    width: 95%;
+.nav-menu li::after {
+    content: "";
+    width: 0;
     height: 3px;
     background: #460167;
-    border-radius: 10px;
-    margin: 0.1rem;
+    position: absolute;
+    bottom: -6px;  
+    left: 0;
+    transition: width 0.4s ease;
+}
+.nav-menu li:hover::after {
+    width: 100%;
 }
 .nav-login{
     display: flex;
@@ -60,7 +66,11 @@
     cursor: pointer;
     font-size: 1.1rem;
     font-weight: 600;
+    transition: all 0.2s ease;
 }
 .nav-login button:hover{
-    background-color: #691874;
+    background: transparent;
+    border: 2px solid #DF8532;
+    color: #460167;
+    box-shadow: 0px 0px 20px 0px #df8632a2;
 }
