--- a/client/src/components/CommunityComponents/CommunityMain.css
+++ b/client/src/components/CommunityComponents/CommunityMain.css
@@ -1,9 +1,10 @@
 .main {
   display: flex;
-  padding: 20px 10px;
+  padding: 20px 10px 20px 20px;
   flex: 0.75;
   flex-direction: column;
-  overflow-y: scroll; /* Enable vertical scrolling for scrolling on Community_Main */
+  overflow: hidden;
+  /* overflow-y: scroll; Enable vertical scrolling for scrolling on Community_Main */
   /* height: 100%; Set to take up the full height for scrolling on Community_Main */
 }
 
